@@ -2,8 +2,8 @@ Package: sjstats
 Type: Package
 Encoding: UTF-8
 Title: Collection of Convenient Functions for Common Statistical Computations
-Version: 0.10.3.9000
-Date: 2017-08-20
+Version: 0.11.0
+Date: 2017-08-21
 Author: Daniel Lüdecke <d.luedecke@uke.de>
 Maintainer: Daniel Lüdecke <d.luedecke@uke.de>
 Description: Collection of convenient functions for common statistical computations,
@@ -42,8 +42,8 @@ Imports:
     rlang,
     sandwich (>= 2.3-4),
     sjlabelled (>= 1.0.1),
-    sjmisc (>= 2.6.0),
-    tidyr (>= 0.6.3),
+    sjmisc (>= 2.6.1),
+    tidyr (>= 0.7.0),
     tibble (>= 1.3.3)
 Suggests:
     AER,
