@@ -227,7 +227,7 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,has_name)
 importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
-importFrom(tidyr,gather_)
+importFrom(tidyr,gather)
 importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
 importFrom(utils,txtProgressBar)
